pkg/fixtures/addons/helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: "test.uri"
    kubernetes.azure.com/use-osm-mtls: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |2-

      proxy_ssl_name "default.test-namespace.cluster.local";
    nginx.ingress.kubernetes.io/proxy-ssl-secret: kube-system/osm-ingress-client-cert
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
  name: "test-service"
  namespace: "test-namespace"
  labels:
    kubernetes.azure.com/generator: draft
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "host"
      http:
        paths:
          - backend:
              service:
                name: "test-service"
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "host"
      secretName: "keyvault-test-service"
